// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly with a single child 1`] = `
<div
  className="row"
>
  <RowStart>
    start
  </RowStart>
</div>
`;

exports[`rendering renders correctly with multiple children 1`] = `
<div
  className="row"
>
  <RowStart>
    start
  </RowStart>
  <RowEnd>
    end
  </RowEnd>
</div>
`;
